<resources>
    <string name="tinker_instructions"><![CDATA[Welcome to Tinker!\n\n
Tinker is the fastest and easiest way to prototype and play with your Photon.\n\n
You can access the basic input/output functions of the Photon without writing a line of code.\n\n
Tap any pin to get started, select a pin function and tinker with the value. Hold a pin to reset its function. Start with pin D7 - select digitalWrite - blink the attached LED.\n\n
For more information visit: docs.particle.io/photon/tinker/\n\n
Enjoy!]]></string>
    <string name="tinker_instructions_signature">
        <i>-The Particle Team</i>
    </string>
    <string name="title_device_list">Devices</string>
    <string name="title_device_detail">Device Detail</string>
    <string name="title_inspector_detail">Inspector</string>
    <string name="clear_tinker">Reset all pin functions</string>
    <string name="your_devices">Your Devices</string>
    <string name="unnamed_device">(Unnamed device)</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="unclaim">Unclaim</string>
    <string name="unclaim_device_dialog_content">Unclaim device?</string>
    <string name="rename_menu_title">Rename…</string>
    <string name="publish_menu_title">Publish event</string>
    <string name="flash">Flash</string>
    <string name="copy_device_id_to_clipboard">Copy device ID to clipboard</string>
    <string name="docs_link_menu_particle_app_tinker">Particle app/Tinker</string>
    <string name="docs_link_menu_setting_up_your_device">Setting up your Photon/Core</string>
    <string name="docs_link_menu_create_your_own_android_app">Create your own Android app</string>
    <string name="particle_support">Particle support</string>
    <string name="particle_community">Particle community</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="err_msg_device_is_offline">This device is offline, please turn it on and refresh
        in order to Tinker with it.
    </string>
    <string name="title_activity_electron_setup">ElectronSetupActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_barcode_scanner">BarcodeScannerActivity</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the
        camera permission. The application will now exit.
    </string>
    <string name="low_storage_error">Barcode detector dependencies cannot be downloaded due to low
        device storage
    </string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="point_at_sim_barcode">Point at SIM ICCID barcode</string>
    <string name="id">ID</string>
    <string name="ip_address">IP Address</string>
    <string name="last_heard">Last heard</string>
    <string name="event_filter">Event filter</string>
    <string name="clipboard_copy_id_msg">Device ID was copied to the clipboard</string>
    <string name="clipboard_copy_variable">Variable value was copied to the clipboard</string>
    <string name="clipboard_copy_iccid_msg">Device SIM ICCID was copied to the clipboard</string>
    <string name="clipboard_copy_event_msg">Event payload was copied to the clipboard</string>
    <string name="core">Core</string>
    <string name="electron">Electron</string>
    <string name="photon">Photon</string>
    <string name="unknown">Unknown</string>
    <string name="raspberry">Raspberry Pi</string>
    <string name="red_bear_duo">Red Bear Duo</string>
    <string name="bluz">Bluz</string>
    <string name="oak">Oak</string>
    <string name="p1">P1</string>
    <string name="filters">Filters:</string>
    <string name="event">Event</string>
    <string name="data">Data</string>
    <string name="time">Time</string>
    <string name="clear_events_title">Clear all events</string>
    <string name="clear_events_message">All events data will be deleted. Are you sure?</string>
    <string name="sending_argument_failed">Sending argument failed.</string>
    <string name="arguments">(Arguments)</string>
    <string name="iccid">ICCID</string>
    <string name="imei">IMEI</string>
    <string name="data_usage">Data usage</string>
    <string name="no_events">(No events)</string>
    <string name="log_out">Log out</string>
    <string name="search">Search</string>
    <string name="tinker">Tinker</string>
    <string name="device_inspector">Device Inspector</string>
    <string name="close">Close</string>
    <string name="action_clipboard">Copy to clipboard</string>
    <string name="no_exposed_variable_msg">(No exposed variables)</string>
    <string name="no_exposed_function_msg">(No exposed functions)</string>
    <string name="default_mbs">- MBs</string>
    <string name="value_mbs">%1$f MBs</string>
    <string name="publish_positive_action">Publish event</string>
    <string name="cancel">Cancel</string>
    <string name="logout_confirm_message">Are you sure you want to log out?</string>
    <string name="pair_assisting_device_with_your_phone">Pair assisting {product_type} with your phone</string>
    <string name="p_pairassistingdevice_subheader_1">Use your phone\'s camera to scan the sticker printed on the front of the assisting {product_type}</string>
    <string name="p_connecttocloud_xenon_gateway_needs_ethernet">You must connect an ethernet cable to a switch/router with an active internet connection to proceed.</string>
    <string name="p_checkethernetgateway_title">Connect Xenon to Device Cloud</string>
    <string name="p_checkethernetgateway_device_cloud_intro">The Device Cloud is (larger network at play here, introduce the concept)</string>
    <string name="p_checkethernetgateway_ensure_featherwing_is_plugged_in">Make sure an Ethernet Featherwing is plugged into the Xenon, and an ethernet cable is plugged into the Featherwing.</string>
    <string name="p_action_connect_to_device_cloud">Connect to device cloud</string>
    <string name="p_connectingtodevicecloud_title">Your {product_type} is connecting to the Particle Device Cloud</string>
    <string name="p_connectingtodevicecloud_step_1">Connecting to the internet via Ethernet</string>
    <string name="p_connectingtodevicecloud_step_2">Starting a secure session with the Particle Device Cloud</string>
    <string name="p_connectingtodevicecloud_step_3">Connected successfully!</string>
    <string name="p_action_add_next_mesh_setup">Add next mesh setup</string>
    <string name="p_gatewaysetupfinished_text_2">Adding more devices to your mesh network</string>
    <string name="p_gatewaysetupfinished_using_as_standalone_device">Using as a standalone device?</string>
    <string name="p_action_start_tinkering">Start tinkering</string>
    <string name="p_newmeshnetworkname_header">Give your network a name</string>
    <string name="p_newmeshnetworkname_subheader_1">Easily identify your network once its created</string>
    <string name="p_action_next_set_password">Next: set password</string>
    <string name="p_newmeshnetworkname_name_hint_text">Network name</string>
    <string name="p_newmeshnetworkpassword_title">Set network admin password</string>
    <string name="p_newmeshnetworkpassword_hint_content">You\'ll need this password each time you want to add a new device to this mesh network</string>
    <string name="p_newmeshnetworkpassword_password_hint">Network password</string>
    <string name="p_action_set_admin_password">Set admin password</string>
    <string name="p_pricinginfo_wifi_ethernet_within_free_allotment_title">Enjoy this new mesh network on us</string>
    <string name="p_pricinginfo_wifi_ethernet_within_free_allotment_text1">All new networks begin as <i>micro networks</i></string>
    <string name="p_pricinginfo_wifi_ethernet_within_free_allotment_text2">Micro networks include <b>10 total devices</b> and <b>1 gateway</b></string>
    <string name="p_pricinginfo_wifi_ethernet_within_free_allotment_text3">Your first <b>10</b> <i>micro networks</i> using a Wi-Fi or Ethernet gateway are FREE</string>
    <string name="p_pricinginfo_wifi_ethernet_within_free_allotment_action">Create free network</string>
    <string name="p_pricinginfo_wifi_ethernet_within_free_allotment_fine_print">You have 10 free micro networks left</string>
    <string name="p_pricinginfo_wifi_ethernet_surpassed_free_allotment_no_cc_title">To create this network, enroll in a Device Cloud Subscription</string>
    <string name="p_pricinginfo_wifi_ethernet_surpassed_free_allotment_no_cc_text1">All new networks begin as <i>micro networks</i></string>
    <string name="p_pricinginfo_wifi_ethernet_surpassed_free_allotment_no_cc_text2">Micro networks include <b>10 total devices</b> and <b>1 gateway</b></string>
    <string name="p_pricinginfo_wifi_ethernet_surpassed_free_allotment_no_cc_text3">You will be billed $1.99 per mo. for this network.  Full pricing</string>
    <string name="p_pricinginfo_wifi_ethernet_surpassed_free_allotment_no_cc_action">Your card ending in 4242 will be used for recurring Device Cloud subscription costs</string>
    <string name="p_pricinginfo_wifi_ethernet_surpassed_free_allotment_with_cc_title">To create this network, enroll in a Device Cloud Subscription</string>
    <string name="p_pricinginfo_wifi_ethernet_surpassed_free_allotment_with_cc_text1">All new networks begin as <i>micro networks</i></string>
    <string name="p_pricinginfo_wifi_ethernet_surpassed_free_allotment_with_cc_text2">Micro networks include <b>10 total devices</b> and <b>1 gateway</b></string>
    <string name="p_pricinginfo_wifi_ethernet_surpassed_free_allotment_with_cc_text3">You will be billed $1.99 per mo. for this network.  Full pricing</string>
    <string name="p_action_next">next</string>
    <string name="p_meshbilling_micro_network">Micro Network</string>
    <string name="p_meshbilling_network_type_wifi_ethernet_gateway">Wi-Fi/Ethernet Gateway</string>
    <string name="p_meshbilling_first_10_networks_free">First 10 networks FREE</string>
    <string name="p_meshbilling_pricing">{price} per mo.</string>
    <string name="p_meshbilling_mesh_network_includes">-- mesh network includes --</string>
    <string name="p_meshbilling_device_cloud_features">Device Cloud Features +</string>
    <string name="p_meshbilling_total_devices"><b>10</b> total devices</string>
    <string name="p_meshbilling_gateway_limit">Up to <b>1</b> gateway</string>
    <string name="p_meshbilling_support_type">Standard support</string>
    <string name="p_meshbilling_enter_cc_on_next_screen">You will be asked to enter your credit card details on the next screen</string>
    <string name="p_meshbilling_header_need_subscription">To create a new mesh network, please enroll in a Device Cloud subscription</string>
    <string name="p_argonconnecttocloud_header_gateway">OK — Let\'s get this mesh gateway connected to the Device Cloud</string>
    <string name="p_argonconnecttocloud_step1_gateway">Gateways require a <b>connection to the Device Cloud</b> to allow communication between the local mesh network and the Internet</string>
    <string name="p_argonconnecttocloud_step2_gateway">To connect, you will send the Argon Wi-Fi network credentials</string>
    <string name="p_argonconnecttocloud_step3_gateway">Once connected, you can <b>create or join a mesh network</b> using this Argon</string>
</resources>