<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@id/action_device_clear_tinker"
        android:title="@string/clear_tinker"
        app:showAsAction="never"/>

    <item
        android:id="@+id/documentation"
        android:title="Documentation">
        <menu>
            <item
                android:id="@+id/action_show_docs_particle_app_tinker"
                android:title="@string/docs_link_menu_particle_app_tinker"/>

            <item
                android:id="@+id/action_show_docs_setting_up_your_device"
                android:title="@string/docs_link_menu_setting_up_your_device"/>

            <!-- FIXME: enable when shipping -->
            <item
                android:id="@+id/action_show_docs_create_your_own_android_app"
                android:title="@string/docs_link_menu_create_your_own_android_app"
                android:visible="false"/>
        </menu>
    </item>

    <item
        android:id="@+id/support"
        android:title="Support">
        <menu>
            <item
                android:id="@+id/action_support_show_community"
                android:title="@string/particle_community"/>

            <item
                android:id="@+id/action_support_show_support_site"
                android:title="@string/particle_support"/>
        </menu>
    </item>

</menu>