<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="io.particle.mesh.setup.ui.CheckEthernetGatewayFragment">

<TextView
    android:id="@+id/setup_header_text"
    style="@style/p_setup_header_text"
    android:layout_marginTop="@dimen/p_setup_header_margin_top"
    android:text="@string/p_checkethernetgateway_title"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/textView"
    style="@style/setup_step_text"
    android:text="@string/p_checkethernetgateway_device_cloud_intro"
    app:layout_constraintBottom_toTopOf="@+id/textView2"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/setup_header_text" />

<TextView
    android:id="@+id/textView2"
    style="@style/setup_step_text"
    android:text="@string/p_checkethernetgateway_ensure_featherwing_is_plugged_in"
    app:layout_constraintBottom_toTopOf="@+id/videoView"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView" />

<VideoView
    android:id="@+id/videoView"
    android:layout_width="200dp"
    android:layout_height="200dp"
    app:layout_constraintBottom_toTopOf="@+id/action_next"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView2" />

<Button
    android:id="@id/action_next"
    style="@style/Widget.AppCompat.Button.Colored"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:text="@string/p_action_connect_to_device_cloud"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>