<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.particle.mesh.ui.setup.ConnectToDeviceCloudIntroFragment"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/setup_header_text"
        style="@style/p_setup_header_text"
        android:text="@string/p_argonconnecttocloud_header_gateway"
        app:layout_constraintBottom_toTopOf="@+id/p_mesh_step1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/p_mesh_step1"
        style="@style/setup_step_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p_argonconnecttocloud_step1_gateway"
        app:layout_constraintBottom_toTopOf="@+id/p_mesh_step2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setup_header_text" />

    <TextView
        android:id="@+id/p_mesh_step2"
        style="@style/setup_step_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p_argonconnecttocloud_step2_gateway"
        app:layout_constraintBottom_toTopOf="@+id/p_mesh_step3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p_mesh_step1" />

    <TextView
        android:id="@+id/p_mesh_step3"
        style="@style/setup_step_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p_argonconnecttocloud_step3_gateway"
        app:layout_constraintBottom_toTopOf="@+id/p_action_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p_mesh_step2" />

    <Button
        android:id="@+id/p_action_next"
        style="@style/p_mesh_button_style"
        android:layout_width="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/p_action_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
