<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.particle.mesh.setup.ui.PricingInfoFragment">

    <TextView
        android:id="@+id/setup_header_text"
        style="@style/p_setup_header_text"
        android:layout_marginTop="@dimen/p_setup_header_margin_top"
        android:text="@string/p_pricinginfo_wifi_ethernet_within_free_allotment_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        style="@style/setup_step_text"
        android:paddingTop="24dp"
        android:text="@string/p_pricinginfo_wifi_ethernet_within_free_allotment_text1"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setup_header_text"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        style="@style/setup_step_text"
        android:paddingTop="24dp"
        android:text="@string/p_pricinginfo_wifi_ethernet_within_free_allotment_text2"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        style="@style/setup_step_text"
        android:paddingTop="24dp"
        android:text="@string/p_pricinginfo_wifi_ethernet_within_free_allotment_text3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@id/action_next"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/p_pricinginfo_wifi_ethernet_within_free_allotment_action"
        app:layout_constraintBottom_toTopOf="@+id/fine_print"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/fine_print"
        style="@style/setup_fine_print"
        android:layout_marginBottom="24dp"
        android:text="@string/p_pricinginfo_wifi_ethernet_within_free_allotment_text3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="200dp" />

</android.support.constraint.ConstraintLayout>