<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.particle.mesh.setup.ui.NewMeshNetworkNameFragment"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/setup_header_text"
        style="@style/p_setup_header_text"
        android:layout_marginTop="@dimen/p_setup_header_margin_top"
        android:text="@string/p_newmeshnetworkname_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@style/setup_step_text"
        android:layout_marginTop="16dp"
        android:text="@string/p_newmeshnetworkname_subheader_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setup_header_text" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/networkNameInputLayout"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/p_newmeshnetworkname_name_hint_text"
            android:maxLength="16"
            android:inputType="text">

        </android.support.design.widget.TextInputEditText>
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@id/action_next"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/p_action_next_set_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="133dp" />

</android.support.constraint.ConstraintLayout>